--- a/index.html
+++ b/index.html
@@ -513,9 +513,9 @@
         </div>
       </footer>
 
-      <div class="popup popup-shown hidden" id="popup">
+      <div class="popup popup-shown hidden">
         <div class="form-popup">
-          <button class="popup-x" id="popup-close"></button>
+          <button class="popup-close"></button>
           <div class="section-title-container section-title-container-popup">
             <span class="trends-title">ваш фидбек</span>
           </div>
@@ -533,7 +533,7 @@
               <span class="feedback-hint">Вы подписаны на e-mail рассылку?</span>
             </div>
             <div class="popup-radio-wrap">
-              <div class="popup-radio-var">
+              <div class="popup-radio-option">
                 <label class="radio-label">
                   <input
                     type="radio"
@@ -541,17 +541,17 @@
                     name="email-radio"
                     checked
                   />
-                  <span class="radio-var">Да</span>
+                  <span class="radio-option">Да</span>
                 </label>
               </div>
-              <div class="popup-radio-var">
+              <div class="popup-radio-option">
                 <label class="radio-label">
                   <input
                     type="radio"
                     class="popup-form-radioname"
                     name="email-radio"
                   />
-                  <span class="radio-var">Нет</span>
+                  <span class="radio-option">Нет</span>
                 </label>
               </div>
             </div>
