--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <span class="product__price-old">1000 ₽</span>
              <span class="product__price-new">800 ₽</span>
             </div>
-          <button class="product__button" type="button">в магазин</button>
+          <button class="product__button" type="submit">в магазин</button>
         </div>
       </div>
     </article>
@@ -443,7 +443,7 @@
           <div class="product__prices">
             <span class="product__price-new">3500 ₽</span>
             </div>
-          <button class="product__button" type="button">в магазин</button>
+          <button class="product__button" type="submit">в магазин</button>
         </div>
       </div>
     </article>
@@ -471,7 +471,7 @@
             <span class="product__price-old">500 ₽</span>
             <span class="product__price-new">400 ₽</span>
             </div>
-          <button class="product__button" type="button">в магазин</button>
+          <button class="product__button" type="submit">в магазин</button>
         </div>
       </div>
     </article>
