--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                    srcset="images/shop-item-tablet1.jpg">   
            <source media="(max-width: 640px)"
                    srcset="images/shop-item-mobile1.jpg">  
-        <img src="images/shop-item-desk1.jpg" alt="Превью Подушки">
+        <img class="shop-item-image" src="images/shop-item-desk1.jpg" alt="Превью Подушки">
         </picture>
       </div>
       <div class="product__body">
@@ -428,7 +428,7 @@
                    srcset="images/shop-item-tablet2.jpg">   
            <source media="(max-width: 640px)"
                    srcset="images/shop-item-mobile2.jpg">  
-        <img src="images/shop-item-desk2.jpg" alt="Кукла Зайчик">
+        <img class="shop-item-image" src="images/shop-item-desk2.jpg" alt="Кукла Зайчик">
         </picture>
       </div>
       <div class="product__body">
@@ -455,7 +455,7 @@
                    srcset="images/shop-item-tablet3.jpg">   
            <source media="(max-width: 640px)"
                    srcset="images/shop-item-mobile3.jpg">  
-        <img src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
+        <img class="shop-item-image" src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
         </picture>
       </div>
       <div class="product__body">
