--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     </div>
   </footer>
 
-  <div class="popup popup-shown hidden">
+  <div class="popup popup-shown">
     <div class="form-popup">
       <button class="popup-close"></button>
       <div class="section-title-container section-title-container-popup">
