--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
     <div class="form-popup">
       <button class="popup-close"></button>
       <div class="section-title-container section-title-container-popup">
-        <span class="trends-title">ваш фидбек</span>
+        <h5 class="trends-title">ваш фидбек</h5>
       </div>
       <form class="feedback-form">
         <label class="feedback-label">
